--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
                     <a class="navbar-brand" href="./index.html">
                         <img src="./img/small-logo.png" alt="Bootstrap" width="56" height="52"></a>
                     <a class="navbar-brand" href="./index.html">
-                        <h1>Football Shop</h1>
+                        <h2>Football Shop</h2>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -59,7 +59,7 @@
         <header>
             <div class="container-fluid">
                 <div class="row align-items-center">
-                    <H1 class="header-text mt-3">FOOTBAL SHOP</H1>
+                    <H1 class="header-text mt-3">FOOTBAL SHOP БЛОГ</H1>
                 </div>
                 <div class="row align-items-center">
                     <h5>
