--- a/bin.html
+++ b/bin.html
@@ -18,7 +18,7 @@
                 <a class="navbar-brand" href="./index.html">
                     <img src="./img/small-logo.png" alt="Bootstrap" width="56" height="52"></a>
                 <a class="navbar-brand" href="./index.html">
-                    <h1>Football Shop</h1>
+                    <h2>Football Shop</h2>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -58,7 +58,10 @@
     <main>
         <div class="py-3 py-md-5 bg-light">
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row">
+                    <h1>Корзина</h1>
+                </div>
+                <div class="row align-items-center mt-2">
                     <p class="avtorization">Пожалуйста авторизийрутесь</p>
                     <form>
                         <div class="mb-3">
